Jenkinsfile: JVM Options should not be passed in Maven call